Inegrate Docker and Swagger UI documentation